2006-07-10  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb),
	(entry_key_press_after_cb), (entry_activate_after_cb),
	(match_selected_cb), (action_activated_after_cb),
	(ephy_location_entry_construct_contents),
	(ephy_location_entry_set_completion):
	* src/ephy-location-action.c: (action_activated_cb):

	Fix middle-click and ctrl-enter in the location entry autocompletion
	drop-down. Bug #345934, based on a patch by johannes@sipsolutions.net.

2006-07-06  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp: (OnProgressChange64):

	Don't hammer the cpu when downloading file with an unknown size.
	Fix bug 346671.

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:

	Guess what? Another mozilla API change!

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:
	* embed/mozilla/AutoWindowModalState.h:

	Fix the build.

2006-07-06  Christian Persch  <chpe@cvs.gnome.org>

	A embed/mozilla/AutoWindowModalState.cpp:
	A embed/mozilla/AutoWindowModalState.h:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/FilePicker.h:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
	* embed/mozilla/Makefile.am:

	Prevent DOM window closure while we display a modal dialogue on it.

2006-07-01  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c
	(ephy_bookmark_action_sync_smart_url):
	
	Don't cast to gboolean but check for != NULL instead.

2006-06-16  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* src/ephy-session.c: (session_command_autoresume):
	Make the crash recovery dialog appear on the taskbar.
	Fixes bug #345010.

2006-06-16  Christian Persch  <chpe@cvs.gnome.org>
